<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compare_layout"

    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/source_of_workload_title"
                android:textColor="#000000"
                android:textSize="@dimen/second_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/source_of_workload_description"
                android:textSize="@dimen/second_description" />

            <ProgressBar
                android:id="@+id/compare_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:progress="0"
                android:max="15"/>

            <Button
                android:id="@+id/top_select"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:text="@string/mental_demand_title"
                android:textSize="@dimen/second_button" />

            <TextView
                android:id="@+id/top_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mental_demand_description"
                android:textSize="@dimen/second_subject_description" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="or"
                android:textColor="#000000"
                android:textSize="@dimen/subjective_title"
                android:textStyle="bold" />


            <Button
                android:id="@+id/bottom_select"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:text="@string/physical_demand_title"
                android:textSize="@dimen/second_button" />

            <TextView
                android:id="@+id/bottom_description"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/physical_demand_description"
                android:textSize="@dimen/second_subject_description" />





        </LinearLayout>



    </ScrollView>



</LinearLayout>


